crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-10729-0.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-10729-0.json",
  "count": 16,
  "first": [
    1,
    1,
    "1 серия SD/FullHD НТВ",
    "SD/FullHD",
    "НТВ",
    0
  ],
  "last_number": 16,
  "with_subtitles": 0
}
