crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-10909-0.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-10909-0.json",
  "count": 8,
  "first": [
    1,
    1,
    "1 серия SD",
    "SD",
    null,
    0
  ],
  "last_number": 8,
  "with_subtitles": 0
}
