crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-10909-68.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-10909-68.json",
  "count": 1,
  "first": [
    1,
    null,
    "Основной",
    null,
    null,
    0
  ],
  "last_number": null,
  "with_subtitles": 0
}
