crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-22063-0.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-22063-0.json",
  "count": 7,
  "first": [
    1,
    1,
    "1 серия SD/FullHD LostFilm",
    "SD/FullHD",
    "LostFilm",
    0
  ],
  "last_number": null,
  "with_subtitles": 0
}
