crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-22063-33.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-22063-33.json",
  "count": 6,
  "first": [
    1,
    1,
    "1 серия SD ViruseProject",
    "SD",
    "ViruseProject",
    0
  ],
  "last_number": 6,
  "with_subtitles": 0
}
